--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <h2>Work Experience</h2>
             <div class="section-content">
                 <div class="job">
-                    <div class="job-title">General Manager</div>
+                    <div class="job-title">Senior Sales Director</div>
                     <div class="company">Foshan Banru Optical | Foshan, China</div>
                     <div class="date">Nov 2022 – Present</div>
                     <ul>
@@ -218,7 +218,7 @@
                 </div>
 
                 <div class="job">
-                    <div class="job-title">CEO</div>
+                    <div class="job-title">Sales Director</div>
                     <div class="company">LOCATION.AI | Lai Chi Kok, Hong Kong</div>
                     <div class="date">Jul 2015 – Sep 2022</div>
                     <ul>
@@ -229,7 +229,7 @@
                 </div>
 
                 <div class="job">
-                    <div class="job-title">Office Manager</div>
+                    <div class="job-title">BJ Office Manager</div>
                     <div class="company">Intertek Testing Services | Beijing, China</div>
                     <div class="date">Sep 2008 – May 2015</div>
                     <ul>
