--- a/resume_cn.html
+++ b/resume_cn.html
@@ -184,7 +184,7 @@
             <h2>工作经验</h2>
             <div class="section-content">
                 <div class="job">
-                    <div class="job-title">总经理</div>
+                    <div class="job-title">资深销售总监</div>
                     <div class="company">佛山班如光学 | 佛山，中国</div>
                     <div class="date">2022年11月 – 至今</div>
                     <ul>
@@ -195,7 +195,7 @@
                 </div>
 
                 <div class="job">
-                    <div class="job-title">行政总裁</div>
+                    <div class="job-title">销售总监</div>
                     <div class="company">LOCATION.AI | 荔枝角，香港</div>
                     <div class="date">2015年7月 – 2022年9月</div>
                     <ul>
@@ -206,7 +206,7 @@
                 </div>
 
                 <div class="job">
-                    <div class="job-title">办公室经理</div>
+                    <div class="job-title">北京办事处经理</div>
                     <div class="company">Intertek 天祥集团 | 北京，中国</div>
                     <div class="date">2008年9月 – 2015年5月</div>
                     <ul>
